[package]
name = "Space"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.10", features = ["collector", "cache", "framework", "standard_framework", "rustls_backend"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread", "signal"] }
dotenv = { version = "0.15.0" }
rand = { version = "0.8.5" }
unic-emoji-char = { version = "0.9.0" }
chrono = { version = "0.4.19" }
unidecode = { version = "0.3.0" }
mysql = { version = "22.1.0" }
base64 = { version = "0.13.0" }
isahc = { version = "1.7.0", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_urlencoded = { version = "0.7.1" }
serde_json = { version = "1.0.79" }
serde_repr = { version = "0.1.7" }
lazy_static = { version = "1.4.0" }
redis = { version = "0.21.5" }
env_logger = { version = "0.9.0" }
log = { version = "0.4.16" }
songbird = {version = "0.2.2" }
tracing = { version = "0.1.32" }
reqwest = {version = "0.11.10"}